tests/resource_files_with_module_name_wrapper/resource_files_with_module_name_wrapper.exp
Error ------------------------------------------------------------------------------------------------------ test.js:1:2

Cannot cast `require(...)` to string because boolean [1] is incompatible with string [2]. [incompatible-cast]

   test.js:1:2
   1| (require("./foo.css"): string); // error: boolean ~> string
       ^^^^^^^^^^^^^^^^^^^^

References:
   cssMock.js:2:25
   2| declare module.exports: boolean;
                              ^^^^^^^ [1]
   test.js:1:24
   1| (require("./foo.css"): string); // error: boolean ~> string
                             ^^^^^^ [2]



Found 1 error
